# tasks

./: .dockerignore  .gitignore  Dockerfile  Makefile  TODO.txt  docker-compose.yml  main.py  pyproject.toml  todo.txt  wait-for.sh
.configs/alertmanager/: config.yml
.configs/keycloak/: realm.json
.configs/opentelemetry-collector/: collector.yaml
.configs/prometheus/: prometheus.yml
.github/: pull_request_template.md
app/: __main__.py  config.py  logger.py
app/domain/: aggregate.py  event.py
app/domain/models/: __init__.py  context.py  errors.py  ports.py  task.py  task_list.py  user.py
app/entrypoints/server/fastapi/: __init__.py  dependencies.py  handlers.py  middlewares.py
app/entrypoints/server/fastapi/routers/: __init__.py  monitoring.py  user.py
app/entrypoints/server/fastapi/routes/: __init__.py  monitoring.py  monitoring_routes.py  task_list.py
app/entrypoints/server/fastapi/routes/v1/: __init__.py  task_list_routes.py
app/entrypoints/server/graphql/: __init__.py  schema.py
app/entrypoints/server/graphql/v1/: __init__.py  task_list.py
app/infra/: __init__.py  connection.py
app/infra/keycloak/: auth.py
app/infra/memory/: auth.py  cache.py  metrics.py  publisher.py
app/infra/nats/: connection.py  publisher.py
app/infra/prometheus/: metrics.py
app/infra/redis/: cache.py  connection.py
app/infra/sqlalchemy/: alembic.ini  connection.py  encoder.py  query.py  tables.py  uow.py
app/infra/sqlalchemy/migrations/: env.py
app/infra/sqlalchemy/migrations/versions/: 34f335cb7bbc_.py  4a08daeab812_.py  64b9b712a7b7_init.py
app/services/: __init__.py  caching_strategies.md  errors.py  reflection.py
app/services/ports/: __init__.py  auth.py  cache.py  metrics.py  publisher.py  query.py  uow.py
app/services/task_list/: dtos.py  service.py
app/services/task_list/v1/: __init__.py  dtos.py  read_service.py  write_service.py
app/services/user/: __init__.py  service.py
docs/: README.md
tests/integration/: conftest.py
tests/integration/entrypoints/server/fastapi/: test_monitoring_routes.py  test_task_list_routes.py
tests/integration/infra/keycloak/: test_auth.py
tests/integration/infra/nats/: test_publisher.py
tests/integration/infra/redis/: test_cache.py
tests/integration/infra/sqlalchemy/: test_uow.py
tests/integration/server/: test_router_monitoring.py
tests/integration/server/fastapi/: test_monitoring_routes.py  test_task_list_routes.py
tests/unit/: conftest.py
tests/unit/adapters/: test_memory_auth.py  test_memory_cache.py  test_memory_db.py  test_memory_publisher.py  test_sqlalchemy_uow.py
tests/unit/domain/: test_task.py  test_task_list.py
tests/unit/services/: test_query.py  test_task_list.py  test_uow.py
tools/bruno/: bruno.json
tools/bruno/lists/: add_list_status.bru  create_list.bru  create_task.bru  get_list_detail.bru  get_list_names.bru  get_task_list_tasks.bru  list.bru  remove_list_status.bru  task.bru  update_task_list_info.bru
tools/bruno/monitoring/: health.bru  metrics.bru
tools/bruno/monitoriong/: health.bru  metrics.bru
tools/bruno/tasks/: create_task.bru  get_task_list_tasks.bru  update_task.bru
tools/bruno/users/v1/: create user.bru  list users.bru
tools/k6/: monitoriong_healthz.js
