[tool.poetry]
name = "tasks"
version = "0.1.0"
description = ""
authors = ["Robbie Hughes <rwhughes91@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.2"
loguru = "^0.7.2"
pydantic-settings = "^2.2.1"
kink = "^0.8.0"

[tool.poetry.group.current_infra.dependencies]
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
nats-py = "^2.9.0"

[tool.poetry.group.entrypoint_fastapi]
optional = true

[tool.poetry.group.entrypoint_fastapi.dependencies]
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
classy-fastapi = "^0.6.1"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.6"
bandit = "^1.7.9"
safety = "^3.2.4"
mypy = "^1.11.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.7"
pytest-watch = "^4.2.0"
pytest-dotenv = "^0.5.2"
requests = "^2.32.3"
aiosqlite = "^0.20.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
sqlalchemy-schemadisplay = "^2.0"
graphviz = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
fixable = ["ALL"]
extend-select = ["PLR0917"]
ignore = ["CPY", "D", "ANN204", "TID252", "PLR0913", "TCH001", "PLR2004", "FA102"]

[tool.ruff.lint.pylint]
max-positional-args = 1

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402", "S101"]

[tool.ruff.format]
preview = true
quote-style = "double"